--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "digital-age-app",
     "slug": "digital-age-app",
     "version": "1.0.0",
-    
+    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
