--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@shopify/react-native-skia": "^1.2.3",
     "expo": "~50.0.15",
+    "expo-blur": "^12.9.2",
     "expo-font": "~11.10.3",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
