--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-file-system": "~16.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
