--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
