--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.1",
     "yup": "^1.4.0",
-    "expo-location": "~16.5.5"
+    "expo-location": "~16.5.5",
+    "expo-sqlite": "~13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
