--- a/package.json
+++ b/package.json
@@ -16,23 +16,26 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@shopify/react-native-skia": "0.1.221",
     "expo": "^50.0.18",
+    "expo-blur": "~12.9.2",
     "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.2",
     "expo-splash-screen": "~0.26.5",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.1",
-    "yup": "^1.4.0",
-    "expo-location": "~16.5.5",
-    "expo-sqlite": "~13.4.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
